[gd_scene load_steps=5 format=3 uid="uid://c6i1kbkxcqt3k"]

[ext_resource type="Script" path="res://Characters/Enemies/Enemy.gd" id="1_mjjj2"]
[ext_resource type="Texture2D" uid="uid://usarp17wx5io" path="res://Assets/Characters/comrade2.png" id="2_khrd1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r1ham"]
radius = 26.0
height = 72.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjedp"]
size = Vector2(34.5, 55)

[node name="Enemy" type="Area2D"]
script = ExtResource("1_mjjj2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_r1ham")

[node name="KillingRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillingRange"]
position = Vector2(-21.75, 0)
shape = SubResource("RectangleShape2D_kjedp")

[node name="Comrade2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -7)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_khrd1")

[connection signal="body_entered" from="KillingRange" to="." method="_on_killing_range_body_entered"]
[connection signal="body_exited" from="KillingRange" to="." method="_on_killing_range_body_exited"]
